# tokyo_whisperers

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  eval.sh  evaluate_baselines.ipynb  infer.py  main.py  plotter.py  pyproject.toml  run.sh  run_evaluation.py  run_plotters.sh  test.sh  train_e2e.sh  train_lora.sh
conf/: dataset_config.yaml  dataset_config_no_cv.yaml  dataset_config_with_cv.yaml
plot_conf/: base.yaml  base_eval.yaml  base_spec.yaml  base_spec_eval.yaml  lora.yaml  lora_eval.yaml  small.yaml  small_eval.yaml  small_spec.yaml  small_spec_eval.yaml  tiny.yaml  tiny_eval.yaml  tiny_spec.yaml  tiny_spec_eval.yaml
report/: egbib.bib  egbib.tex  report.tex
schemas/: __init__.py  args.py  collator.py  lora.py
scripts/: e2e.sh  e2e_base.sh  e2e_small.sh  e2e_spec_aug.sh  e2e_spec_aug_base.sh  e2e_spec_aug_small.sh  e2e_spec_aug_with_cv.sh  evaluate_baselines.py  no_reg.sh  r_128_a_64_d_025.sh  r_128_a_64_d_025_spec_aug.sh  r_254_a_128_d_025_spec_aug.sh  r_254_a_128_d_025_spec_aug_base.sh  r_254_a_128_d_025_spec_aug_small.sh  r_32_a_16_d_025_spec_aug.sh  r_64_a_32_d_025.sh  r_64_a_32_d_025_spec_aug.sh  with_lora.sh  with_lora_no_cv.sh  with_reg.sh
src/: augment.py  callbacks.py  dataloader.py  metrics.py  metrics_cache.py  text_normalizer.py  viz.py
